reposition lights, fix scrollbar issue

--- a/Resources/CSS/Main.css
+++ b/Resources/CSS/Main.css
@@ -1,9 +1,11 @@
 body {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #container {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
